fix(mobile): fix overflow on mobile view to prevent horizontal scroll

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,9 +1,9 @@
 @import '../styles/variables';
 
 .app-container {
-    display: block;
+    display: flex;
+    flex-direction: column;
     scroll-behavior: smooth;
-    overflow: auto;
     overflow-x: hidden;
     width: 100%;
     height: 100%;
