--- a/src/app/components/personal-profile/personal-profile.component.scss
+++ b/src/app/components/personal-profile/personal-profile.component.scss
@@ -2,7 +2,7 @@
 
 .profile-container {
     display: flex;
-    padding: cssvar(padding-20);
+    margin: cssvar(padding-20);
     .business-card-container {
         flex: 1;
         width: 100%;
